# hexal

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  LICENSE-APACHE  README.md
.github/workflows/: docs.yml  publish.yml  test.yml
proptest-regressions/: lib.txt
src/: dir.rs  hex.rs  int.rs  internal.rs  iter.rs  lib.rs  offset.rs
