[package]
name = "hexal"
edition = "2024"
version = "0.1.0-alpha.2"
rust-version = "1.87"
authors = ["Matan Lurey <matan@lurey.org>"]
license = "MIT OR Apache-2.0"
description = "Axial hex coordinates for no_std and embedded targets"
repository = "https://github.com/crates-lurey-io/hexal"
homepage = "https://github.com/crates-lurey-io/hexal"
documentation = "https://docs.rs/hexal"
keywords = ["hex", "hexagonal", "grid", "gamedev", "no-std"]
categories = ["game-development", "mathematics", "no-std"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
must_use_candidate = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
module_name_repetitions = "allow"

[features]
default = []
serde = ["dep:serde"]
ixy = ["dep:ixy"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
ixy = { version = "0.6.0-alpha.7", optional = true }

[dev-dependencies]
proptest = "1"
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
